# resybot

./: .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
scripts/: run.py  test_config.py  verify.py
src/: __init__.py  config.py  models.py
src/bot/: executor.py  headers.py  notifier.py
src/server/: main.py
src/utils/: __init__.py  jwt.py  proxy.py
